--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
             "w3ocom\\FieldsPack\\": "src/"
         }
     },
-    "require": {},
+    "require": {
+        "php": ">=7.3"
+    },
     "require-dev": {
         "phpunit/phpunit": "*",
         "vitexsoftware/phpunit-skeleton-generator": "2.1.0"
